--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
         <h2>Select a Task</h2>
         <button class="task-btn" data-task="read-aloud">Read Aloud</button>
         <button class="task-btn" data-task="describe-image">Describe Image</button>
+        <button class="task-btn" data-task="essay">Essay Writing</button>
         
         <!-- Add more buttons for other tasks here -->
     </nav>
