--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,9 +17,11 @@
         <h2>Select a Task</h2>
         <button class="task-btn" data-task="read-aloud">Read Aloud</button>
         <button class="task-btn" data-task="describe-image">Describe Image</button>
+        <button class="task-btn" data-task="reorder-paragraph">Re-order Paragraph</button>
         <button class="task-btn" data-task="essay">Essay Writing</button>
-        
-        <!-- Add more buttons for other tasks here -->
+        <!-- NEW TASK BUTTONS -->
+        <button class="task-btn" data-task="summarize-written-text">Summarize Written Text</button>
+        <button class="task-btn" data-task="mcsa">Multiple-Choice (Single)</button>
     </nav>
 
     <main id="exam-area">
@@ -42,7 +44,6 @@
         <p>© 2025 Wimbledon Language Academy</p>
     </footer>
 
-    <!-- Include SortableJS for Re-order Paragraph -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="script.js"></script>
 </body>
