--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PTE Academic Practice</title>
     <link rel="stylesheet" href="style.css">
+    <!-- You will need to create a style.css file with your desired styling -->
 </head>
 <body>
     <header>
@@ -18,10 +19,8 @@
         <button class="task-btn" data-task="read-aloud">Read Aloud</button>
         <button class="task-btn" data-task="describe-image">Describe Image</button>
         <button class="task-btn" data-task="reorder-paragraph">Re-order Paragraph</button>
+        <!-- NEW TASK BUTTON -->
         <button class="task-btn" data-task="essay">Essay Writing</button>
-        <!-- NEW TASK BUTTONS -->
-        <button class="task-btn" data-task="summarize-written-text">Summarize Written Text</button>
-        <button class="task-btn" data-task="mcsa">Multiple-Choice (Single)</button>
     </nav>
 
     <main id="exam-area">
@@ -44,6 +43,7 @@
         <p>© 2025 Wimbledon Language Academy</p>
     </footer>
 
+    <!-- Include SortableJS for Re-order Paragraph -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="script.js"></script>
 </body>
