--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PTE Academic Practice</title>
     <link rel="stylesheet" href="style.css">
-    <!-- You will need to create a style.css file with your desired styling -->
 </head>
 <body>
     <header>
@@ -17,9 +16,11 @@
     <nav id="task-selection">
         <h2>Select a Task</h2>
         <button class="task-btn" data-task="read-aloud">Read Aloud</button>
+        <!-- NEW TASK BUTTONS -->
+        <button class="task-btn" data-task="repeat-sentence">Repeat Sentence</button>
+        <button class="task-btn" data-task="answer-short-question">Answer Short Question</button>
         <button class="task-btn" data-task="describe-image">Describe Image</button>
         
-        <!-- NEW TASK BUTTON -->
         <button class="task-btn" data-task="essay">Essay Writing</button>
     </nav>
 
@@ -40,7 +41,7 @@
     </main>
 
     <footer>
-        <p>© 2025 WLA</p>
+        <p>© 2024 Wimbledon Language Academy</p>
     </footer>
 
     <!-- Include SortableJS for Re-order Paragraph -->
