--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,7 @@
         <button class="task-btn" data-task="repeat-sentence">Repeat Sentence</button>
         <button class="task-btn" data-task="answer-short-question">Answer Short Question</button>
         <button class="task-btn" data-task="describe-image">Describe Image</button>
+        <button class="task-btn" data-task="reorder-paragraph">Re-order Paragraph</button>
         
         <button class="task-btn" data-task="essay">Essay Writing</button>
     </nav>
